--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -21,6 +21,10 @@
 
 .countdownContainer > div span {
   flex: 1;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .countdownContainer > div span:first-child {
@@ -38,6 +42,7 @@
 .countdownButton {
   width: 100%;
   height: 5rem;
+  outline: 0;
 
   margin-top: 2rem;
 
@@ -57,6 +62,10 @@
   transition: background-color 0.2s;
 }
 
+.countdownButton > svg {
+  margin-left: 8px;
+}
+
 .countdownButton:not([disabled]):hover {
   background: var(--blue-dark)
 }
@@ -74,4 +83,15 @@
   background: var(--white);
   color: var(--text);
   cursor: not-allowed;
+}
+
+.progressCountdown {
+  height: 4px;
+  border-radius: 4px;
+  background: var(--gray-line);
+}
+.progressCountdown > div {
+  height: 4px;
+  border-radius: 4px;
+  background: var(--green);
 }
