--- a/src/styles/components/Sidebar.module.css
+++ b/src/styles/components/Sidebar.module.css
@@ -25,7 +25,7 @@
   justify-content: center;
   align-items: center;
 }
-.buttonsContainer div {
+.buttonsContainer button {
   width: 100%;
   height: 50px;
 
@@ -33,19 +33,37 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 16px;
-}
 
-.buttonsContainer div svg {
-  width: 32px;
-  height: 32px;
-
+  background: transparent;
+  border: 0;
+  outline: 0;
   color: var(--text);
 }
 
-.active {
+.buttonsContainer button svg {
+  width: 32px;
+  height: 32px;
+  margin-left: 5px;
+}
+
+.buttonsContainer > .challenges {
   border-left: 5px solid var(--blue);
-  border-radius: 0px 5px 5px 0px;
+  border-radius: 5px;
 }
-.active > svg {
-  color: var(--blue-dark);
+
+.buttonsContainer > .leaderboard {
+  border-left: 5px solid var(--blue);
+  border-radius: 5px;
 }
+.buttonsContainer .challenges svg {
+  margin-left: 5px;
+  color: var(--blue);
+}
+
+.buttonsContainer .leaderboard svg {
+  margin-left: 5px;
+  color: var(--blue);
+}
+
+
+
